[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/ColorObj.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/WaterObj.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/World_Sample.gd" type="Script" id=3]


[node name="World_Sample" type="Node2D"]
position = Vector2( 0, -1 )
script = ExtResource( 3 )

[node name="ColorParent" type="Node2D" parent="."]
position = Vector2( 511, 134 )

[node name="ColorObj" parent="ColorParent" instance=ExtResource( 1 )]

[node name="WaterParent" type="Node2D" parent="."]
position = Vector2( 594, 373 )

[node name="WaterObj" parent="WaterParent" instance=ExtResource( 2 )]
